--- a/tutorials/qpu_layouts.ipynb
+++ b/tutorials/qpu_layouts.ipynb
@@ -25,11 +25,29 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "c38725fb",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-01-12T17:59:35.449056Z",
+     "start_time": "2022-01-12T17:59:35.440629Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "\n",
+    "# Plot output of every command\n",
+    "InteractiveShell.ast_node_interactivity = \"all\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "a98b7575",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-11T02:50:18.569233Z",
-     "start_time": "2022-01-11T02:50:16.432883Z"
+     "end_time": "2022-01-12T17:59:37.780461Z",
+     "start_time": "2022-01-12T17:59:35.454801Z"
     }
    },
    "outputs": [
@@ -48,10 +66,9 @@
        "<Figure size 720x144 with 1 Axes>"
       ]
      },
-     "metadata": {
-      "needs_background": "light"
-     },
-     "output_type": "display_data"
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -60,10 +77,9 @@
        "<Figure size 720x113.684 with 1 Axes>"
       ]
      },
-     "metadata": {
-      "needs_background": "light"
-     },
-     "output_type": "display_data"
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -72,10 +88,9 @@
        "<Figure size 432x432 with 1 Axes>"
       ]
      },
-     "metadata": {
-      "needs_background": "light"
-     },
-     "output_type": "display_data"
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -84,10 +99,9 @@
        "<Figure size 432x486 with 1 Axes>"
       ]
      },
-     "metadata": {
-      "needs_background": "light"
-     },
-     "output_type": "display_data"
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -96,10 +110,9 @@
        "<Figure size 576x493.714 with 1 Axes>"
       ]
      },
-     "metadata": {
-      "needs_background": "light"
-     },
-     "output_type": "display_data"
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -142,12 +155,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4e9321ff",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-11T02:50:18.710043Z",
-     "start_time": "2022-01-11T02:50:18.571733Z"
+     "end_time": "2022-01-12T17:59:37.913450Z",
+     "start_time": "2022-01-12T17:59:37.782047Z"
     }
    },
    "outputs": [
@@ -158,10 +171,9 @@
        "<Figure size 432x172.8 with 1 Axes>"
       ]
      },
-     "metadata": {
-      "needs_background": "light"
-     },
-     "output_type": "display_data"
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -183,12 +195,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e94de754",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-11T02:50:20.101058Z",
-     "start_time": "2022-01-11T02:50:18.711584Z"
+     "end_time": "2022-01-12T17:59:39.353652Z",
+     "start_time": "2022-01-12T17:59:37.915534Z"
     }
    },
    "outputs": [
@@ -197,13 +209,13 @@
      "output_type": "stream",
      "text": [
       "# Optimization: hybridq\n",
-      "Compress circuit (max_n_qubits=False): Done! (0.82s)\n"
+      "Compress circuit (max_n_qubits=False): Done! (0.85s)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aba0cec651a34ba6b08f96d2f4d8a381",
+       "model_id": "1fcd65fcc5164287b1bb7281be477339",
        "version_major": 2,
        "version_minor": 0
       },
@@ -219,15 +231,15 @@
      "output_type": "stream",
      "text": [
       "000000000000: +0.015625+0.000000j\n",
-      "000000000001: -0.003224+0.008961j\n",
-      "000000000010: -0.008255-0.001068j\n",
-      "000000000011: +0.013212+0.006283j\n",
-      "000000000100: -0.000568-0.005871j\n",
-      "000000000101: +0.005948+0.001782j\n",
-      "000000000110: +0.009862-0.004304j\n",
-      "000000000111: +0.005152+0.000824j\n",
-      "000000001000: -0.003387+0.024500j\n",
-      "000000001001: -0.005203-0.010798j\n"
+      "000000000001: -0.006323-0.005247j\n",
+      "000000000010: -0.021155+0.000179j\n",
+      "000000000011: -0.010809+0.012028j\n",
+      "000000000100: +0.001229-0.004532j\n",
+      "000000000101: -0.000803-0.000134j\n",
+      "000000000110: +0.007101+0.010695j\n",
+      "000000000111: +0.010554+0.001425j\n",
+      "000000001000: +0.018923+0.000312j\n",
+      "000000001001: -0.014894+0.001249j\n"
      ]
     },
     {
