--- a/hybridq/modules/hybridq_parallel/tutorials/parallel.ipynb
+++ b/hybridq/modules/hybridq_parallel/tutorials/parallel.ipynb
@@ -75,21 +75,12 @@
     "list(pmap(lambda x: x**2, range(10), pickler='cloudpickle'))\n",
     "> [0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n",
     "```\n",
-    "Finally, **HybridQ-Parallel** uses `tqdm` to provide a progressbar:\n",
+    "If needed, a progressbar can be added using packages like `tqdm`:\n",
     "```\n",
     "from hybridq_parallel import map as pmap\n",
+    "from tqdm.auto import tqdm\n",
     "\n",
-    "list(pmap(lambda x, y: y * x**2, range(10), range(10), verbose=True))\n",
-    "> [0, 1, 8, 27, 64, 125, 216, 343, 512, 729]\n",
-    "```\n",
-    "Extra parameters can be passed to `tqdm` through `verbose`:\n",
-    "```\n",
-    "from hybridq_parallel import starmap\n",
-    "\n",
-    "list(\n",
-    "    starmap(lambda x, y: x * y**2,\n",
-    "            zip(range(10), range(10)),\n",
-    "            verbose=dict(total=10)))\n",
+    "list(tqdm(pmap(lambda x, y: y * x**2, range(10), range(10)), total=10))\n",
     "```\n",
     "\n",
     "## How To Cite\n",
@@ -120,8 +111,8 @@
    "id": "a11a15e6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-30T16:49:09.413466Z",
-     "start_time": "2022-11-30T16:49:09.253689Z"
+     "end_time": "2022-12-01T16:56:09.016691Z",
+     "start_time": "2022-12-01T16:56:08.867495Z"
     }
    },
    "outputs": [
@@ -129,7 +120,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-30 08:49:09,312:hybridq_parallel.parallel:WARNING:Starting executor with 8 workers\n"
+      "2022-12-01 08:56:08,924:hybridq_parallel.parallel:INFO:Starting executor with 8 workers\n"
      ]
     },
     {
@@ -155,8 +146,8 @@
    "id": "b3f08c36",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-30T16:49:09.432588Z",
-     "start_time": "2022-11-30T16:49:09.416035Z"
+     "end_time": "2022-12-01T16:56:09.036202Z",
+     "start_time": "2022-12-01T16:56:09.019699Z"
     }
    },
    "outputs": [
@@ -164,8 +155,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-30 08:49:09,417:hybridq_parallel.parallel:WARNING:Shutting down executor\n",
-      "2022-11-30 08:49:09,428:hybridq_parallel.parallel:WARNING:Starting executor with 2 workers\n"
+      "2022-12-01 08:56:09,021:hybridq_parallel.parallel:INFO:Shutting down executor\n",
+      "2022-12-01 08:56:09,032:hybridq_parallel.parallel:INFO:Starting executor with 2 workers\n"
      ]
     },
     {
@@ -193,8 +184,8 @@
    "id": "c45bd747",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-30T16:49:09.463702Z",
-     "start_time": "2022-11-30T16:49:09.435575Z"
+     "end_time": "2022-12-01T16:56:09.068377Z",
+     "start_time": "2022-12-01T16:56:09.039887Z"
     }
    },
    "outputs": [
@@ -221,8 +212,8 @@
    "id": "911d0663",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-30T16:49:09.472198Z",
-     "start_time": "2022-11-30T16:49:09.466039Z"
+     "end_time": "2022-12-01T16:56:09.077863Z",
+     "start_time": "2022-12-01T16:56:09.071215Z"
     }
    },
    "outputs": [
@@ -230,13 +221,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Can't pickle <function <lambda> at 0x7fd2f5ee6200>: attribute lookup <lambda> on __main__ failed\n"
+      "Can't pickle <function <lambda> at 0x7f19900fe200>: attribute lookup <lambda> on __main__ failed\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "b'\\x80\\x04\\x95\\x15\\x01\\x00\\x00\\x00\\x00\\x00\\x00\\x8c\\x19hybridq_parallel.parallel\\x94\\x8c\\x08Function\\x94\\x93\\x94)\\x81\\x94\\x8c\\x04dill\\x94C\\xdb\\x80\\x04\\x95\\xd0\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x8c\\ndill._dill\\x94\\x8c\\x10_create_function\\x94\\x93\\x94(h\\x00\\x8c\\x0c_create_code\\x94\\x93\\x94(C\\x00\\x94K\\x01K\\x00K\\x00K\\x01K\\x01KCC\\x04|\\x00S\\x00\\x94N\\x85\\x94)\\x8c\\x01x\\x94\\x85\\x94\\x8c#/tmp/ipykernel_188973/4171778938.py\\x94\\x8c\\x08<lambda>\\x94K\\x04C\\x02\\x04\\x00\\x94))t\\x94R\\x94c__builtin__\\n__main__\\nh\\x0bNNt\\x94R\\x94}\\x94}\\x94\\x8c\\x0f__annotations__\\x94}\\x94s\\x86\\x94b.\\x94\\x86\\x94b.'"
+       "b'\\x80\\x04\\x95\\x15\\x01\\x00\\x00\\x00\\x00\\x00\\x00\\x8c\\x19hybridq_parallel.parallel\\x94\\x8c\\x08Function\\x94\\x93\\x94)\\x81\\x94\\x8c\\x04dill\\x94C\\xdb\\x80\\x04\\x95\\xd0\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x8c\\ndill._dill\\x94\\x8c\\x10_create_function\\x94\\x93\\x94(h\\x00\\x8c\\x0c_create_code\\x94\\x93\\x94(C\\x00\\x94K\\x01K\\x00K\\x00K\\x01K\\x01KCC\\x04|\\x00S\\x00\\x94N\\x85\\x94)\\x8c\\x01x\\x94\\x85\\x94\\x8c#/tmp/ipykernel_246653/4171778938.py\\x94\\x8c\\x08<lambda>\\x94K\\x04C\\x02\\x04\\x00\\x94))t\\x94R\\x94c__builtin__\\n__main__\\nh\\x0bNNt\\x94R\\x94}\\x94}\\x94\\x8c\\x0f__annotations__\\x94}\\x94s\\x86\\x94b.\\x94\\x86\\x94b.'"
       ]
      },
      "execution_count": 4,
@@ -264,8 +255,8 @@
    "id": "5f65930f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-30T16:49:09.485299Z",
-     "start_time": "2022-11-30T16:49:09.473874Z"
+     "end_time": "2022-12-01T16:56:09.090162Z",
+     "start_time": "2022-12-01T16:56:09.079877Z"
     }
    },
    "outputs": [
@@ -292,25 +283,11 @@
    "id": "b1230150",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-30T16:49:09.530866Z",
-     "start_time": "2022-11-30T16:49:09.487102Z"
+     "end_time": "2022-12-01T16:56:09.100794Z",
+     "start_time": "2022-12-01T16:56:09.091757Z"
     }
    },
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0186bf6529ff4edb923a93a82cf247f5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/10 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/plain": [
@@ -325,7 +302,7 @@
    "source": [
     "from hybridq_parallel import map as pmap\n",
     "\n",
-    "list(pmap(lambda x, y: y * x**2, range(10), range(10), verbose=True))"
+    "list(pmap(lambda x, y: y * x**2, range(10), range(10)))"
    ]
   },
   {
@@ -334,15 +311,46 @@
    "id": "9321a7a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-30T16:49:09.590445Z",
-     "start_time": "2022-11-30T16:49:09.532982Z"
+     "end_time": "2022-12-01T16:56:09.122522Z",
+     "start_time": "2022-12-01T16:56:09.102492Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 8, 27, 64, 125, 216, 343, 512, 729]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from hybridq_parallel import starmap\n",
+    "\n",
+    "list(starmap(\n",
+    "    lambda x, y: x * y**2,\n",
+    "    zip(range(10), range(10)),\n",
+    "))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f0956bb4",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-12-01T16:56:09.156450Z",
+     "start_time": "2022-12-01T16:56:09.124632Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99d85b436f12444db63f6eb035bfb5cc",
+       "model_id": "10f0b877b66044ec8bf756c05e8c70e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -359,18 +367,16 @@
        "[0, 1, 8, 27, 64, 125, 216, 343, 512, 729]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from hybridq_parallel import starmap\n",
+    "from hybridq_parallel import map as pmap\n",
+    "from tqdm.auto import tqdm\n",
     "\n",
-    "list(\n",
-    "    starmap(lambda x, y: x * y**2,\n",
-    "            zip(range(10), range(10)),\n",
-    "            verbose=dict(total=10)))"
+    "list(tqdm(pmap(lambda x, y: y * x**2, range(10), range(10)), total=10))"
    ]
   }
  ],
