--- a/hybridq/modules/hybridq_options/tutorials/options.ipynb
+++ b/hybridq/modules/hybridq_options/tutorials/options.ipynb
@@ -131,6 +131,16 @@
     "> f() = 2\n",
     "> f() = 1\n",
     "```\n",
+    "`parse_default` preserves both the signature and docstring of `f`.\n",
+    "Default values are added at the end of the docstring:\n",
+    "```\n",
+    "help(f)\n",
+    "> Help on function f in module __main__:\n",
+    "> \n",
+    "> f(v=Default)\n",
+    ">     Default values:\n",
+    ">             v = 1\n",
+    "```\n",
     "Options can be changed on-the-fly:\n",
     "```\n",
     "opts['v'] = 'hello!'\n",
@@ -139,6 +149,16 @@
     "print(f'{f() = }')\n",
     "> f() = 'hello!'\n",
     "```\n",
+    "Default values are automatically updated in the docstring:\n",
+    "```\n",
+    "help(f)\n",
+    "> Help on function f in module __main__:\n",
+    "> \n",
+    "> f(v=Default)\n",
+    ">     Default values:\n",
+    ">             v = hello!\n",
+    "```\n",
+    "\n",
     "`parse_default` can parse default values for all kind of parameters:\n",
     "```\n",
     "# Reset options\n",
@@ -165,31 +185,27 @@
     "      c=Default,\n",
     "      E=5,\n",
     "      d=Default):\n",
+    "    \"\"\"\n",
+    "    Docstring for function `f`.\n",
+    "    \"\"\"\n",
+    "    \n",
     "    return A, a, B, b, C, D, c, E, d\n",
     "\n",
     "# Check\n",
     "assert (f() == (1, opts['key0.a'], 2, opts['key0.b'], 3, 4, opts['key0.c'], 5,\n",
     "                opts['key0.d']))\n",
-    "```\n",
-    "Functions decorated using `parse_default` can be pickled as usual:\n",
-    "```\n",
-    "import pickle\n",
-    "\n",
-    "# Dump binary\n",
-    "pickle.dumps(f)\n",
-    "> b\"\\x80...\"\n",
-    "```\n",
-    "By default, the module `dill` is used to pickle the decorated function.\n",
-    "Alternative modules compatible with `pickle` can be also used:\n",
-    "```\n",
-    "import cloudpickle\n",
-    "\n",
-    "@parse_default(opts, pickler='cloudpickle')\n",
-    "def f():\n",
-    "    ...\n",
-    "\n",
-    "# Dump binary\n",
-    "pickle.dumps(f)\n",
+    "                \n",
+    "help(f)\n",
+    "> Help on function f in module __main__:\n",
+    "> \n",
+    "> f(A=1, a=Default, /, B=2, b=Default, C=3, *, D=4, c=Default, E=5, d=Default)\n",
+    ">         Docstring for function `f`.\n",
+    ">         \n",
+    ">     Default values:\n",
+    ">             a = wDcQdccUesNFRKiYzbNF\n",
+    ">             b = EzfcymRoHOxalvbxUXBy\n",
+    ">             c = mpYEYWUqpLsLvfndxIXF\n",
+    ">             d = HGikXVBASaGCSlGYvaxQ\n",
     "```\n",
     "\n",
     "## How To Cite\n",
@@ -221,8 +237,8 @@
    "id": "7c051f5c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-12T17:13:44.916056Z",
-     "start_time": "2023-01-12T17:13:44.532196Z"
+     "end_time": "2023-01-13T03:09:20.820160Z",
+     "start_time": "2023-01-13T03:09:20.470658Z"
     }
    },
    "outputs": [
@@ -259,8 +275,8 @@
    "id": "325e5f2d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-12T17:13:44.926634Z",
-     "start_time": "2023-01-12T17:13:44.921302Z"
+     "end_time": "2023-01-13T03:09:20.829863Z",
+     "start_time": "2023-01-13T03:09:20.825593Z"
     }
    },
    "outputs": [
@@ -285,8 +301,8 @@
    "id": "a69c4dd9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-12T17:13:44.938668Z",
-     "start_time": "2023-01-12T17:13:44.928814Z"
+     "end_time": "2023-01-13T03:09:20.842526Z",
+     "start_time": "2023-01-13T03:09:20.833775Z"
     }
    },
    "outputs": [
@@ -311,8 +327,8 @@
    "id": "53a8ec4b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-12T17:13:44.943890Z",
-     "start_time": "2023-01-12T17:13:44.940664Z"
+     "end_time": "2023-01-13T03:09:20.848711Z",
+     "start_time": "2023-01-13T03:09:20.844767Z"
     }
    },
    "outputs": [],
@@ -328,8 +344,8 @@
    "id": "dea0a4be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-12T17:13:44.950340Z",
-     "start_time": "2023-01-12T17:13:44.945838Z"
+     "end_time": "2023-01-13T03:09:20.855213Z",
+     "start_time": "2023-01-13T03:09:20.851000Z"
     }
    },
    "outputs": [
@@ -355,8 +371,8 @@
    "id": "c740bce5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-12T17:13:44.955968Z",
-     "start_time": "2023-01-12T17:13:44.951907Z"
+     "end_time": "2023-01-13T03:09:20.862652Z",
+     "start_time": "2023-01-13T03:09:20.857383Z"
     }
    },
    "outputs": [
@@ -395,8 +411,8 @@
    "id": "647cf177",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-12T17:13:44.962797Z",
-     "start_time": "2023-01-12T17:13:44.958865Z"
+     "end_time": "2023-01-13T03:09:20.868866Z",
+     "start_time": "2023-01-13T03:09:20.865177Z"
     }
    },
    "outputs": [
@@ -422,8 +438,8 @@
    "id": "0c4e6ec5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-12T17:13:44.986783Z",
-     "start_time": "2023-01-12T17:13:44.965154Z"
+     "end_time": "2023-01-13T03:09:20.886533Z",
+     "start_time": "2023-01-13T03:09:20.871250Z"
     }
    },
    "outputs": [
@@ -977,8 +993,8 @@
    "id": "941e6d83",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-12T17:13:45.116346Z",
-     "start_time": "2023-01-12T17:13:44.994406Z"
+     "end_time": "2023-01-13T03:09:21.008484Z",
+     "start_time": "2023-01-13T03:09:20.889131Z"
     }
    },
    "outputs": [
@@ -1035,11 +1051,41 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "87ab0c3c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-13T03:09:21.013511Z",
+     "start_time": "2023-01-13T03:09:21.010229Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function f in module __main__:\n",
+      "\n",
+      "f(v=Default)\n",
+      "    Default values:\n",
+      "            v = 1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The signature and docstring for 'f' is preserved, and default values\n",
+    "# are added at the end of the docstring\n",
+    "help(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "1e28df8d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-12T17:13:45.123801Z",
-     "start_time": "2023-01-12T17:13:45.119042Z"
+     "end_time": "2023-01-13T03:09:21.018949Z",
+     "start_time": "2023-01-13T03:09:21.015622Z"
     }
    },
    "outputs": [
@@ -1061,15 +1107,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
+   "id": "1d57342d",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-13T03:09:21.028309Z",
+     "start_time": "2023-01-13T03:09:21.025133Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function f in module __main__:\n",
+      "\n",
+      "f(v=Default)\n",
+      "    Default values:\n",
+      "            v = hello!\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Default values are automatically updated in the docstring\n",
+    "help(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "645cf7b7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-12T17:13:45.139298Z",
-     "start_time": "2023-01-12T17:13:45.125925Z"
+     "end_time": "2023-01-13T03:09:21.039594Z",
+     "start_time": "2023-01-13T03:09:21.031078Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function f in module __main__:\n",
+      "\n",
+      "f(A=1, a=Default, /, B=2, b=Default, C=3, *, D=4, c=Default, E=5, d=Default)\n",
+      "        Docstring for function `f`.\n",
+      "        \n",
+      "    Default values:\n",
+      "            a = qTbQWcyAooMvaCeQdhAJ\n",
+      "            b = SegTCFjUkfFSIbSogSvf\n",
+      "            c = ByRCtjPuTzfDXMpkyZaT\n",
+      "            d = VhnkWOFjUgnVhosugDMJ\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 'parse_default' can parse default values for all kind of parameters:\n",
     "\n",
@@ -1098,79 +1191,18 @@
     "      c=Default,\n",
     "      E=5,\n",
     "      d=Default):\n",
+    "    \"\"\"\n",
+    "    Docstring for function `f`.\n",
+    "    \"\"\"\n",
     "    return A, a, B, b, C, D, c, E, d\n",
     "\n",
     "\n",
     "# Check\n",
     "assert (f() == (1, opts['key0.a'], 2, opts['key0.b'], 3, 4, opts['key0.c'], 5,\n",
-    "                opts['key0.d']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "235835d8",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-01-12T17:13:45.158969Z",
-     "start_time": "2023-01-12T17:13:45.142057Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "b\"\\x80\\x04\\x95\\xb5\\x03\\x00\\x00\\x00\\x00\\x00\\x00\\x8c\\x15hybridq_options.utils\\x94\\x8c\\t_Function\\x94\\x93\\x94)\\x81\\x94B\\x84\\x03\\x00\\x00\\x80\\x04\\x95y\\x03\\x00\\x00\\x00\\x00\\x00\\x00(\\x8c\\ndill._dill\\x94\\x8c\\x10_create_function\\x94\\x93\\x94(h\\x00\\x8c\\x0c_create_code\\x94\\x93\\x94(C\\x02\\x00\\x0c\\x94K\\x05K\\x02K\\x04K\\tK\\tKCC\\x16|\\x00|\\x01|\\x02|\\x03|\\x04|\\x05|\\x06|\\x07|\\x08f\\tS\\x00\\x94N\\x85\\x94)(\\x8c\\x01A\\x94\\x8c\\x01a\\x94\\x8c\\x01B\\x94\\x8c\\x01b\\x94\\x8c\\x01C\\x94\\x8c\\x01D\\x94\\x8c\\x01c\\x94\\x8c\\x01E\\x94\\x8c\\x01d\\x94t\\x94\\x8c#/tmp/ipykernel_299724/3291755598.py\\x94\\x8c\\x01f\\x94K\\x10C\\x02\\x16\\x0c\\x94))t\\x94R\\x94c__builtin__\\n__main__\\nh\\x13(K\\x01\\x8c\\x15hybridq_options.utils\\x94\\x8c\\x0bDefaultType\\x94\\x93\\x94)\\x81\\x94K\\x02h\\x1aK\\x03t\\x94Nt\\x94R\\x94}\\x94}\\x94(\\x8c\\x0e__kwdefaults__\\x94}\\x94(h\\rK\\x04h\\x0eh\\x1ah\\x0fK\\x05h\\x10h\\x1au\\x8c\\x0f__annotations__\\x94}\\x94u\\x86\\x94b\\x8c\\x17hybridq_options.options\\x94\\x8c\\x07Options\\x94\\x93\\x94)\\x81\\x94\\x8c\\x04key0\\x94}\\x94(h\\t\\x8c\\x14QEDLOewMBEqYKSmpydpk\\x94h\\x0b\\x8c\\x14SSxfltLGIiPWxTGHyZLy\\x94h\\x0e\\x8c\\x14cUEczMUbYFOWINKwlPgO\\x94h\\x10\\x8c\\x14KNCpjqVLJWJIlqudDBHQ\\x94us}\\x94(\\x8c\\x12_keypath_separator\\x94\\x8c\\x01.\\x94\\x8c\\x05_dict\\x94h')\\x81\\x94h)h*s}\\x94(h0h1h2N\\x8c\\x08_pointer\\x94\\x89ubh5\\x88ubh)\\x8c\\x04dill\\x94(\\x8c\\x07inspect\\x94\\x8c\\tParameter\\x94\\x93\\x94h\\x08h7\\x8c\\x0e_ParameterKind\\x94\\x93\\x94K\\x00\\x85\\x94R\\x94\\x86\\x94R\\x94}\\x94(\\x8c\\x08_default\\x94K\\x01\\x8c\\x0b_annotation\\x94h7\\x8c\\x06_empty\\x94\\x93\\x94ubh9h\\th=\\x86\\x94R\\x94}\\x94(hAh\\x1ahBhDubh9h\\nh;K\\x01\\x85\\x94R\\x94\\x86\\x94R\\x94}\\x94(hAK\\x02hBhDubh9h\\x0bhI\\x86\\x94R\\x94}\\x94(hAh\\x1ahBhDubh9h\\x0chI\\x86\\x94R\\x94}\\x94(hAK\\x03hBhDubt\\x94(h9h\\rh;K\\x03\\x85\\x94R\\x94\\x86\\x94R\\x94}\\x94(hAK\\x04hBhDubh9h\\x0ehU\\x86\\x94R\\x94}\\x94(hAh\\x1ahBhDubh9h\\x0fhU\\x86\\x94R\\x94}\\x94(hAK\\x05hBhDubh9h\\x10hU\\x86\\x94R\\x94}\\x94(hAh\\x1ahBhDubt\\x94t\\x94.\\x94b.\""
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pickle\n",
+    "                opts['key0.d']))\n",
     "\n",
-    "# Functions decorated using 'parse_default' can be pickled as usual:\n",
-    "pickle.dumps(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "b7418943",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-01-12T17:13:45.178607Z",
-     "start_time": "2023-01-12T17:13:45.161339Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "b'\\x80\\x04\\x95\\x08\\x03\\x00\\x00\\x00\\x00\\x00\\x00\\x8c\\x15hybridq_options.utils\\x94\\x8c\\t_Function\\x94\\x93\\x94)\\x81\\x94B\\xd7\\x02\\x00\\x00\\x80\\x05\\x95\\xcc\\x02\\x00\\x00\\x00\\x00\\x00\\x00(\\x8c\\x17cloudpickle.cloudpickle\\x94\\x8c\\x0e_make_function\\x94\\x93\\x94(h\\x00\\x8c\\r_builtin_type\\x94\\x93\\x94\\x8c\\x08CodeType\\x94\\x85\\x94R\\x94(K\\x00K\\x00K\\x00K\\x00K\\x01KCC\\x04d\\x00S\\x00\\x94N\\x85\\x94))\\x8c#/tmp/ipykernel_299724/1943838657.py\\x94\\x8c\\x01f\\x94K\\x07C\\x02\\x04\\x02\\x94))t\\x94R\\x94}\\x94(\\x8c\\x0b__package__\\x94N\\x8c\\x08__name__\\x94\\x8c\\x08__main__\\x94uNNNt\\x94R\\x94\\x8c\\x1ccloudpickle.cloudpickle_fast\\x94\\x8c\\x12_function_setstate\\x94\\x93\\x94h\\x14}\\x94}\\x94(h\\x11h\\x0b\\x8c\\x0c__qualname__\\x94h\\x0b\\x8c\\x0f__annotations__\\x94}\\x94\\x8c\\x0e__kwdefaults__\\x94N\\x8c\\x0c__defaults__\\x94N\\x8c\\n__module__\\x94h\\x12\\x8c\\x07__doc__\\x94N\\x8c\\x0b__closure__\\x94N\\x8c\\x17_cloudpickle_submodules\\x94]\\x94\\x8c\\x0b__globals__\\x94}\\x94u\\x86\\x94\\x86R0\\x8c\\x17hybridq_options.options\\x94\\x8c\\x07Options\\x94\\x93\\x94)\\x81\\x94\\x8c\\x04key0\\x94}\\x94(\\x8c\\x01a\\x94\\x8c\\x14QEDLOewMBEqYKSmpydpk\\x94\\x8c\\x01b\\x94\\x8c\\x14SSxfltLGIiPWxTGHyZLy\\x94\\x8c\\x01c\\x94\\x8c\\x14cUEczMUbYFOWINKwlPgO\\x94\\x8c\\x01d\\x94\\x8c\\x14KNCpjqVLJWJIlqudDBHQ\\x94us}\\x94(\\x8c\\x12_keypath_separator\\x94\\x8c\\x01.\\x94\\x8c\\x05_dict\\x94h))\\x81\\x94h+h,s}\\x94(h6h7h8N\\x8c\\x08_pointer\\x94\\x89ubh;\\x88ub\\x8c\\x15hybridq_options.utils\\x94\\x8c\\x0bcloudpickle\\x94))t\\x94.\\x94b.'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import cloudpickle\n",
-    "\n",
-    "# By default, the module 'dill' is used to pickle the decorated function.\n",
-    "# Alternative modules compatible with 'pickle' can be also used:\n",
-    "\n",
-    "\n",
-    "@parse_default(opts, pickler='cloudpickle')\n",
-    "def f():\n",
-    "    ...\n",
-    "\n",
-    "\n",
-    "# Pickle function\n",
-    "pickle.dumps(f)"
+    "# 'parse_default' also preserves the signature and docstring\n",
+    "help(f)"
    ]
   }
  ],
