--- a/hybridq/modules/hybridq_parallel/tutorials/parallel.ipynb
+++ b/hybridq/modules/hybridq_parallel/tutorials/parallel.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# HybridQ-Parallel: Light-Weight Parallelization\n",
     "\n",
-    "**HybridQ-Parallel** is light-weight library to parallelize processes based on `concurrent.futures.ProcessPoolExecutor`.\n",
+    "**HybridQ-Parallel** is light-weight library to parallelize processes based on `loky`.\n",
     "\n",
     "## Installation\n",
     "\n",
@@ -49,30 +49,14 @@
     "list(starmap(lambda x, y: x * y**2, zip(range(10), range(10))))\n",
     "> [0, 1, 8, 27, 64, 125, 216, 343, 512, 729]\n",
     "```\n",
-    "**HybridQ-Parallel** can pickle any callable by wrapping it using `hybridq_parallel.Function`:\n",
-    "```\n",
-    "from hybridq_parallel import Function\n",
-    "import pickle\n",
     "\n",
-    "fn = lambda x: x\n",
-    "\n",
-    "try:\n",
-    "    pickle.dumps(fn)\n",
-    "except pickle.PickleError as e:\n",
-    "    print(e)\n",
-    "\n",
-    "pickle.dumps(Function(fn))\n",
-    "> Can't pickle <function <lambda> at 0x7f34d0e1a170>: attribute lookup <lambda> on __main__ failed\n",
-    "> b'\\x80...'\n",
-    "```\n",
-    "By default **HybridQ-Parallel** uses `dill` as pickler. The default behavior can be\n",
-    "changed by setting the environment variable `HYBRIDQ_PARALLEL_PICKLER` to the desired\n",
-    "pickler module. Otherwise, a valid pickler module can be provided while calling `map`\n",
-    "and `starmap`:\n",
+    "By default **HybridQ-Parallel** uses `cloudpickle` as pickler. The default behavior can be\n",
+    "changed by setting the environment variable `LOKY_PICKLER` to the desired\n",
+    "pickler module.\n",
     "```\n",
     "from hybridq_parallel import map as pmap\n",
     "\n",
-    "list(pmap(lambda x: x**2, range(10), pickler='cloudpickle'))\n",
+    "list(pmap(lambda x: x**2, range(10)))\n",
     "> [0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n",
     "```\n",
     "If needed, a progressbar can be added using packages like `tqdm`:\n",
@@ -111,8 +95,8 @@
    "id": "a11a15e6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-01T16:56:09.016691Z",
-     "start_time": "2022-12-01T16:56:08.867495Z"
+     "end_time": "2023-01-23T22:03:47.482008Z",
+     "start_time": "2023-01-23T22:03:47.265095Z"
     }
    },
    "outputs": [
@@ -120,7 +104,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-12-01 08:56:08,924:hybridq_parallel.parallel:INFO:Starting executor with 8 workers\n"
+      "2023-01-23 14:03:47,281:hybridq_parallel.parallel:INFO:Started 'Executor' with 8 workers\n"
      ]
     },
     {
@@ -146,8 +130,8 @@
    "id": "b3f08c36",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-01T16:56:09.036202Z",
-     "start_time": "2022-12-01T16:56:09.019699Z"
+     "end_time": "2023-01-23T22:03:47.552895Z",
+     "start_time": "2023-01-23T22:03:47.489621Z"
     }
    },
    "outputs": [
@@ -155,8 +139,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-12-01 08:56:09,021:hybridq_parallel.parallel:INFO:Shutting down executor\n",
-      "2022-12-01 08:56:09,032:hybridq_parallel.parallel:INFO:Starting executor with 2 workers\n"
+      "2023-01-23 14:03:47,546:hybridq_parallel.parallel:INFO:Shut down 'Executor'\n",
+      "2023-01-23 14:03:47,549:hybridq_parallel.parallel:INFO:Started 'Executor' with 2 workers\n"
      ]
     },
     {
@@ -184,8 +168,8 @@
    "id": "c45bd747",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-01T16:56:09.068377Z",
-     "start_time": "2022-12-01T16:56:09.039887Z"
+     "end_time": "2023-01-23T22:03:47.650836Z",
+     "start_time": "2023-01-23T22:03:47.554955Z"
     }
    },
    "outputs": [
@@ -209,82 +193,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "911d0663",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-12-01T16:56:09.077863Z",
-     "start_time": "2022-12-01T16:56:09.071215Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Can't pickle <function <lambda> at 0x7f19900fe200>: attribute lookup <lambda> on __main__ failed\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "b'\\x80\\x04\\x95\\x15\\x01\\x00\\x00\\x00\\x00\\x00\\x00\\x8c\\x19hybridq_parallel.parallel\\x94\\x8c\\x08Function\\x94\\x93\\x94)\\x81\\x94\\x8c\\x04dill\\x94C\\xdb\\x80\\x04\\x95\\xd0\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x8c\\ndill._dill\\x94\\x8c\\x10_create_function\\x94\\x93\\x94(h\\x00\\x8c\\x0c_create_code\\x94\\x93\\x94(C\\x00\\x94K\\x01K\\x00K\\x00K\\x01K\\x01KCC\\x04|\\x00S\\x00\\x94N\\x85\\x94)\\x8c\\x01x\\x94\\x85\\x94\\x8c#/tmp/ipykernel_246653/4171778938.py\\x94\\x8c\\x08<lambda>\\x94K\\x04C\\x02\\x04\\x00\\x94))t\\x94R\\x94c__builtin__\\n__main__\\nh\\x0bNNt\\x94R\\x94}\\x94}\\x94\\x8c\\x0f__annotations__\\x94}\\x94s\\x86\\x94b.\\x94\\x86\\x94b.'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from hybridq_parallel import Function\n",
-    "import pickle\n",
-    "\n",
-    "fn = lambda x: x\n",
-    "\n",
-    "try:\n",
-    "    pickle.dumps(fn)\n",
-    "except pickle.PickleError as e:\n",
-    "    print(e)\n",
-    "\n",
-    "pickle.dumps(Function(fn))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "5f65930f",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-12-01T16:56:09.090162Z",
-     "start_time": "2022-12-01T16:56:09.079877Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from hybridq_parallel import map as pmap\n",
-    "\n",
-    "list(pmap(lambda x: x**2, range(10), pickler='cloudpickle'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "id": "b1230150",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-01T16:56:09.100794Z",
-     "start_time": "2022-12-01T16:56:09.091757Z"
+     "end_time": "2023-01-23T22:03:47.662205Z",
+     "start_time": "2023-01-23T22:03:47.653860Z"
     }
    },
    "outputs": [
@@ -294,7 +207,7 @@
        "[0, 1, 8, 27, 64, 125, 216, 343, 512, 729]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,12 +220,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "9321a7a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-01T16:56:09.122522Z",
-     "start_time": "2022-12-01T16:56:09.102492Z"
+     "end_time": "2023-01-23T22:03:47.672698Z",
+     "start_time": "2023-01-23T22:03:47.664151Z"
     }
    },
    "outputs": [
@@ -322,7 +235,7 @@
        "[0, 1, 8, 27, 64, 125, 216, 343, 512, 729]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,19 +251,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "f0956bb4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-01T16:56:09.156450Z",
-     "start_time": "2022-12-01T16:56:09.124632Z"
+     "end_time": "2023-01-23T22:03:47.747550Z",
+     "start_time": "2023-01-23T22:03:47.674319Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "10f0b877b66044ec8bf756c05e8c70e7",
+       "model_id": "38f299d6c3924e5ba6071a8ee3c8d8ae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -367,7 +280,7 @@
        "[0, 1, 8, 27, 64, 125, 216, 343, 512, 729]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.9"
   },
   "varInspector": {
    "cols": {
